--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-auth:20.0.2'
+    implementation 'com.google.firebase:firebase-storage:19.2.1'
+    implementation 'com.google.firebase:firebase-database:19.6.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     implementation "com.google.android.material:material:1.3.0-rc01"
@@ -91,4 +93,8 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
 
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
+
+    //Dependência Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
