--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,6 @@ dependencies {
 
     //Dependência Gson
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    compile 'com.android.support:design:25.3.1'
 }
