--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DesafioFirebase">
-        <activity android:name=".ui.RegisterGameActivity"></activity>
-        <activity android:name=".ui.HomeActivity" />
+        <activity android:name=".ui.GameDetailsActivity"></activity>
+        <activity android:name=".ui.RegisterGameActivity" />
+        <activity
+            android:name=".ui.HomeActivity"
+            android:windowSoftInputMode="stateHidden"/>
         <activity android:name=".ui.RegisterActivity" />
         <activity android:name=".ui.LoginActivity" />
         <activity android:name=".ui.SplashScreen">
